Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4409

Queries locking if key_cache_segments !=0 and MyISAM variables are modified at runtime

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.2, 5.5.30, 5.2.14, 5.3.12
    • 10.0.4, 5.5.32
    • None
    • None
    • Debian Squeeze x64

    Description

      On a server running with key_cache_segments != 0, doing an INSERT on a MyISAM table and at the same time a SET GLOBAL key_buffer_size or key_cache_block_size (might probably also happen with other variables) with any value => the INSERT query will never end and won't be killable (will stay in killed state but table lock and process will still be active).

      In order to unlock the table, mysqld must be SIGKILL and the table will be crashed at restart.

      ps: I only have tried with INSERT and SELECT, using a SELECT doesn't triggers the bug.

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            jb-boin Jean Weisbuch
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Time Spent - 1d 10m Remaining Estimate - 1d
                1d
                Logged:
                Time Spent - 1d 10m Remaining Estimate - 1d
                1d 10m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.